--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       dockerfile: ./docker/php/Dockerfile
     volumes:
       - ./src:/app
+    ports:
+      - "5173:5173"
   nginx:
     build:
       context: .
